Closed Bug 1619626 Opened 5 years ago Closed 5 years ago

HttpTransactionParent is not released properly when TransactionObserver is involved

Categories

(Core :: Networking, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox75 --- fixed

People

(Reporter: kershaw, Assigned: kershaw)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

There is a cycle between TransactionObserverFunc and the HttpTransactionParent, since the lambda function captures a pointer to HttpTransactionParent here and the lambda function is also hold by the transaction.

Priority: -- → P2
Whiteboard: [necko-triaged]
Assignee: nobody → kershaw
Pushed by kjang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5999c2033ddb Refactor TransactionObserver and fix the cycle issue r=dragana
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: