Bug 1619626 - Refactor TransactionObserver and fix the cycle issue r=dragana

Differential Revision: https://phabricator.services.mozilla.com/D65187