netwerk/protocol/http/HttpTransactionChild.cpp
@@ -60,6 +60,7 @@ nsresult HttpTransactionChild::InitInternal(
     uint64_t topLevelOuterContentWindowId, uint8_t httpTrafficCategory,
     uint64_t requestContextID, uint32_t classOfService, uint32_t initialRwin,
     bool responseTimeoutEnabled, uint64_t channelId,
+    bool aHasTransactionObserver,
     const Maybe<H2PushedStreamArg>& aPushedStreamArg) {
   LOG(("HttpTransactionChild::InitInternal [this=%p caps=%x]\n", this, caps));
 
@@ -83,6 +84,16 @@ nsresult HttpTransactionChild::InitInternal(
     };
   }
 
+  std::function<void(TransactionObserverResult &&)> observer;
+  if (aHasTransactionObserver) {
+    nsMainThreadPtrHandle<HttpTransactionChild> handle(
+        new nsMainThreadPtrHolder<HttpTransactionChild>(
+            "HttpTransactionChildProxy", this, false));
+    observer = [handle](TransactionObserverResult&& aResult) {
+      handle->mTransactionObserverResult.emplace(std::move(aResult));
+    };
+  }
+
   RefPtr<nsHttpTransaction> transWithPushedStream;
   uint32_t pushedStreamId = 0;
   if (aPushedStreamArg) {
@@ -98,9 +109,8 @@ nsresult HttpTransactionChild::InitInternal(
       nullptr,  // TODO: security callback, fix in bug 1512479.
       this, topLevelOuterContentWindowId,
       static_cast<HttpTrafficCategory>(httpTrafficCategory), rc, classOfService,
-      initialRwin, responseTimeoutEnabled, channelId,
-      std::move(mTransactionObserver), std::move(pushCallback),
-      transWithPushedStream, pushedStreamId);
+      initialRwin, responseTimeoutEnabled, channelId, std::move(observer),
+      std::move(pushCallback), transWithPushedStream, pushedStreamId);
   if (NS_WARN_IF(NS_FAILED(rv))) {
     mTransaction = nullptr;
     return rv;
@@ -161,19 +171,6 @@ mozilla::ipc::IPCResult HttpTransactionChild::RecvInit(
   mTransaction = new nsHttpTransaction();
   mChannelId = aChannelId;
 
-  if (aHasTransactionObserver) {
-    nsMainThreadPtrHandle<HttpTransactionChild> handle(
-        new nsMainThreadPtrHolder<HttpTransactionChild>(
-            "HttpTransactionChildProxy", this, false));
-    mTransactionObserver = [handle]() {
-      if (handle->mTransaction) {
-        handle->mTransactionObserverResult.emplace();
-        handle->mTransaction->GetTransactionObserverResult(
-            handle->mTransactionObserverResult.ref());
-      }
-    };
-  }
-
   if (aThrottleQueue.isSome()) {
     mThrottleQueue =
         static_cast<InputChannelThrottleQueueChild*>(aThrottleQueue.ref());
@@ -183,7 +180,8 @@ mozilla::ipc::IPCResult HttpTransactionChild::RecvInit(
       aCaps, aArgs, &mRequestHead, mUploadStream, aReqContentLength,
       aReqBodyIncludesHeaders, aTopLevelOuterContentWindowId,
       aHttpTrafficCategory, aRequestContextID, aClassOfService, aInitialRwin,
-      aResponseTimeoutEnabled, aChannelId, aPushedStreamArg);
+      aResponseTimeoutEnabled, aChannelId, aHasTransactionObserver,
+      aPushedStreamArg);
   if (NS_FAILED(rv)) {
     LOG(("HttpTransactionChild::RecvInit: [this=%p] InitInternal failed!\n",
          this));
