netwerk/protocol/http/HttpTransactionParent.cpp
@@ -315,12 +315,6 @@ void HttpTransactionParent::SetDomainLookupEnd(mozilla::TimeStamp timeStamp,
   mTimings.domainLookupEnd = mDomainLookupEnd;
 }
 
-void HttpTransactionParent::GetTransactionObserverResult(
-    TransactionObserverResult& aResult) {
-  MOZ_ASSERT(NS_IsMainThread());
-  aResult = mTransactionObserverResult;
-}
-
 nsHttpTransaction* HttpTransactionParent::AsHttpTransaction() {
   return nullptr;
 }
@@ -480,17 +474,19 @@ mozilla::ipc::IPCResult HttpTransactionParent::RecvOnStopRequest(
     const int64_t& aTransferSize, const TimingStructArgs& aTimings,
     const Maybe<nsHttpHeaderArray>& aResponseTrailers,
     const bool& aHasStickyConn,
-    const Maybe<TransactionObserverResult>& aTransactionObserverResult) {
+    Maybe<TransactionObserverResult>&& aTransactionObserverResult) {
   LOG(("HttpTransactionParent::RecvOnStopRequest [this=%p status=%" PRIx32
        "]\n",
        this, static_cast<uint32_t>(aStatus)));
   mEventQ->RunOrEnqueue(new NeckoTargetChannelFunctionEvent(
       this, [self = UnsafePtr<HttpTransactionParent>(this), aStatus,
              aResponseIsComplete, aTransferSize, aTimings, aResponseTrailers,
-             aHasStickyConn, aTransactionObserverResult]() {
+             aHasStickyConn,
+             aTransactionObserverResult{
+                 std::move(aTransactionObserverResult)}]() mutable {
         self->DoOnStopRequest(aStatus, aResponseIsComplete, aTransferSize,
                               aTimings, aResponseTrailers, aHasStickyConn,
-                              aTransactionObserverResult);
+                              std::move(aTransactionObserverResult));
       }));
   return IPC_OK();
 }
@@ -500,7 +496,7 @@ void HttpTransactionParent::DoOnStopRequest(
     const int64_t& aTransferSize, const TimingStructArgs& aTimings,
     const Maybe<nsHttpHeaderArray>& aResponseTrailers,
     const bool& aHasStickyConn,
-    const Maybe<TransactionObserverResult>& aTransactionObserverResult) {
+    Maybe<TransactionObserverResult>&& aTransactionObserverResult) {
   LOG(("HttpTransactionParent::DoOnStopRequest [this=%p]\n", this));
   if (mCanceled) {
     return;
@@ -521,8 +517,9 @@ void HttpTransactionParent::DoOnStopRequest(
   }
   mHasStickyConnection = aHasStickyConn;
   if (aTransactionObserverResult.isSome()) {
-    mTransactionObserverResult = aTransactionObserverResult.value();
-    mTransactionObserver();
+    TransactionObserverFunc obs = nullptr;
+    std::swap(obs, mTransactionObserver);
+    obs(std::move(*aTransactionObserverResult));
   }
 
   AutoEventEnqueuer ensureSerialDispatch(mEventQ);
